Z-index fixes

--- a/src/components/header/HeaderComponent.scss
+++ b/src/components/header/HeaderComponent.scss
@@ -53,7 +53,6 @@
 
 .navbar-container {
     background-color: white;
-    z-index: 100000;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
 }
